Fixing homepage spaces on mobile

--- a/_scss/layout.scss
+++ b/_scss/layout.scss
@@ -15,6 +15,8 @@
 }
 
 
+
+
 .social {
     width: 100%;
     position: relative;
@@ -367,6 +369,17 @@ HIGHLIGHT
     .page {
         padding-top: 120px;
     }
+    
+    .jumbo {
+        margin-top: 80px;
+        margin-bottom: 20px;
+    }
+    
+    .columns {
+        margin-bottom: 40px;
+    }
+
+    
   }
 
 
