--- a/_scss/lists.scss
+++ b/_scss/lists.scss
@@ -45,6 +45,7 @@ ul li {
     display: inline-block;
     line-height: 18px;
     margin-left: 20px;
+    font-size: 1em;
 }
 .no-bullet li a {
     color: $gray-8;
