--- a/_scss/typography.scss
+++ b/_scss/typography.scss
@@ -40,6 +40,7 @@ h5 span {
     font-size: 1.4em;
     color: $gray-8;
     font-weight: 300;
+    line-height: 1.8em;
 }
 
 #banner h1 {
